--- a/app/Resources/style/_parent.scss
+++ b/app/Resources/style/_parent.scss
@@ -44,7 +44,7 @@ a {
   -moz-box-shadow: 2px 2px 1px #888888;
   -webkit-box-shadow: 2px 2px 1px #888888;
   padding-top: 1em;
-  padding-bottom: 1em;
+  padding-bottom: 3em;
 }
 
 .navbar.navbar-fixed-bottom.navbar-default {
